--- a/src/app/modules/login/pages/login-page/login-page.component.html
+++ b/src/app/modules/login/pages/login-page/login-page.component.html
@@ -2,7 +2,9 @@
   <app-login-form  
     [errorForm]="errorForm$"
     [loading]="loading$ | async"
+    [loadingGoogle]="loadingGoogle$ | async"
     (loginEvent)="submit($event)"
+    (loginGoogleEvent)="loginGoogle()"
   >
   </app-login-form>
 </mat-card>
