--- a/src/app/modules/todo/pages/list-todo-page/list-todo-page.component.html
+++ b/src/app/modules/todo/pages/list-todo-page/list-todo-page.component.html
@@ -2,7 +2,7 @@
   <app-filter-todo (changeFilterValue)="changeFilterValue($event)"></app-filter-todo>
 </mat-card>
 <mat-card>
-  <h2 class="title" matDialogTitle>
+  <h2 class="title title-page" matDialogTitle>
     <span class="material-icons">table_chart</span>
     <span class="text-icons-middle" i18n="@@block.table.title">List Todo</span>
   </h2>
