--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -11,7 +11,7 @@
       <mat-label>
         <span>Email</span>
       </mat-label>
-      <input matInput cdkFocusInitial formControlName="email" />
+      <input matInput name="email" cdkFocusInitial formControlName="email" />
       <mat-error  i18n="@@block-formLogin-error-emailRequired"
             *ngIf="
           loginForm?.get('email')?.errors?.required &&
@@ -45,7 +45,7 @@
       <mat-label>
         <span>Password</span>
       </mat-label>
-      <input matInput type="password" formControlName="password" />
+      <input matInput name="password" type="password" formControlName="password" />
       <mat-error *ngIf="
           loginForm?.get('password')?.errors?.required &&
           loginForm?.get('password')?.touched
@@ -61,13 +61,13 @@
           Max length is:
         </span>
         <span>
-          {{ todoForm.get("password")?.errors.maxlength.requiredLength }}
+          {{ loginForm.get("password")?.errors.maxlength.requiredLength }}
         </span>
       </mat-error>
     </mat-form-field>
 
-    <mat-error *ngIf="loginForm?.hasError('incorrect')">
-      <span i18n="@@block-formLogin-error-emailPassword">
+    <mat-error>
+      <span *ngIf="loginForm?.hasError('incorrect')" class="error-request" i18n="@@block-formLogin-error-emailPassword">
         Email and password do not exist
       </span>
     </mat-error>
