--- a/src/app/modules/todo/components/dialog-delete-todo/dialog-delete-todo.component.html
+++ b/src/app/modules/todo/components/dialog-delete-todo/dialog-delete-todo.component.html
@@ -5,7 +5,7 @@
   <button mat-button type="button" (click)="onDismiss()" i18n="@@notification-disagree">
     Disagree
   </button>
-  <button mat-button type="button" (click)="onConfirm()" color="primary" >
+  <button mat-button type="button" class="submit" (click)="onConfirm()" color="primary" >
     <span class="material-icons">
       done
     </span>
